--- a/live/styles.css
+++ b/live/styles.css
@@ -1,168 +1,1 @@
-body {
-    display: flex;
-    flex-direction: column;
-    font-family: Work Sans;
-}
-.container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-.primary-navigation {
-    margin-left: auto;
-    margin-right: auto;
-    font-weight: 500;
-}
-.nav-list {
-    display: flex;
-    justify-content: space-around;
-    list-style-type: none;
-    white-space: nowrap;
-}
-li {
-    margin: 1em;
-}
-.logo {
-    margin: auto;
-    padding: auto;
-    font-size: 2em;
-    font-weight: 800;
-}
-.nextMovie {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    flex-wrap: wrap;
-}
-.poster {
-    background-color: white;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    padding: 1em;
-    margin: auto;
-    border-radius: 0.5em;
-}
-.paragraph-container {
-    display: flex;
-    margin: 2em;
-}
-.synopsis {
-    width: 50%;
-    margin: auto;
-    padding: 2em;
-    border-radius: 0.5em;
-    background-color: white;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-}
-@media (max-width: 1284px){
-    .synopsis {
-        width: auto;
-    }
-    footer {
-        font-size: 0.9em;
-    }
-    .nextMovie {
-        margin-top: 1em;
-    }
-}
-.movieTitle {
-    font-weight: 700;
-}
-.movieDate {
-    font-weight: 500;
-}
-.poster img {
-    height: 60vh;
-    aspect-ratio: 2/3;
-    border-radius: 0.5em;
-}
-footer {
-    display: flex;
-    justify-content: space-around;
-}
-a {
-    color: black;
-    text-decoration: none;
-}
-.about-container {
-    background-color: white;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    padding: 1em;
-    margin: auto;
-    margin-bottom: 2em;
-    border-radius: 0.5em;
-    max-width: 30%;
-}
-.about-content {
-    margin: 1em;
-}
-.map {
-    height: 30vh;
-    width: 100%;
-}
-.moviesContainer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    padding: 4em;
-    padding-top: 1em;
-}
-.smallPoster {
-    height: 100%;
-    width: 100%;
-    aspect-ratio: 2/3;
-    object-fit: contain;
-}
-.movie {
-    width: 16em;
-    height: 24em;
-    background-color: white;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    padding: 1em;
-    margin: 1em;
-    margin-bottom: 5em;
-    border-radius: 0.5em;
-}
-@media (max-width: 1284px){
-    .moviesContainer{
-        flex-direction: column;
-        padding: auto;
-    }
-    .movie {
-        margin-bottom: 6em;
-        margin-left: auto;
-        margin-right: auto;
-    }
-}
-.social {
-    background-color: white;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    padding: 2em;
-    padding-left: 3em;
-    padding-right: 3em;
-    margin: auto;
-    margin-bottom: 2em;
-    border-radius: 0.5em;
-    max-width: 30%;
-    max-height: 1em;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-.social-div {
-    margin-left: 1em;
-    margin-right: 1em;
-}
-.social-text {
-    font-weight: 700;
-}
-@media (max-width: 1284px){
-    .about-container{
-        max-width: 60%;
-        margin-top: 1em;
-    }
-}
-#map-div {
-    height: 50vh;
-    width: 50vw;
-}
+body{display:flex;flex-direction:column;font-family:Work Sans}.container{display:flex;flex-direction:row;justify-content:space-between}.primary-navigation{margin-left:auto;margin-right:auto;font-weight:500}.nav-list{display:flex;justify-content:space-around;list-style-type:none;white-space:nowrap}li{margin:1em}.logo{margin:auto;padding:auto;font-size:2em;font-weight:800}.nextMovie{display:flex;flex-direction:column;justify-content:space-around;flex-wrap:wrap}.poster{background-color:#fff;box-shadow:rgba(100,100,111,.2) 0 7px 29px 0;padding:1em;margin:auto;border-radius:.5em}.paragraph-container{display:flex;margin:2em}.synopsis{width:50%;margin:auto;padding:2em;border-radius:.5em;background-color:#fff;box-shadow:rgba(100,100,111,.2) 0 7px 29px 0}@media (max-width:1284px){.synopsis{width:auto}footer{font-size:.9em}.nextMovie{margin-top:1em}}.movieTitle{font-weight:700}.movieDate{font-weight:500}.poster img{height:60vh;aspect-ratio:2/3;border-radius:.5em}footer{display:flex;justify-content:space-around}a{color:#000;text-decoration:none}.about-container{background-color:#fff;box-shadow:rgba(100,100,111,.2) 0 7px 29px 0;padding:1em;margin:auto auto 2em;border-radius:.5em;max-width:30%}.about-content{margin:1em}.map{height:30vh;width:100%}.moviesContainer{display:flex;flex-direction:row;justify-content:space-around;flex-wrap:wrap;padding:1em 4em 4em}.smallPoster{height:100%;width:100%;aspect-ratio:2/3;object-fit:contain}.movie{width:16em;height:24em;background-color:#fff;box-shadow:rgba(100,100,111,.2) 0 7px 29px 0;padding:1em;margin:1em 1em 6em;border-radius:.5em}@media (max-width:1284px){.moviesContainer{flex-direction:column;justify-content:center;flex-wrap:nowrap;padding:1em 0 0;margin:auto}.movie{margin:0 0 7em}}.social{background-color:#fff;box-shadow:rgba(100,100,111,.2) 0 7px 29px 0;padding:2em 3em;margin:auto auto 2em;border-radius:.5em;max-width:30%;max-height:1em;display:flex;flex-direction:row;justify-content:space-around}.social-div{margin-left:1em;margin-right:1em}.social-text{font-weight:700}@media (max-width:1284px){.about-container{max-width:60%;margin-top:1em}}#map-div{height:50vh;width:50vw}
